Squashed commit of the following:
commit 97fc742fc285239aa14edf5eb6c5aac987a7c9ed
Author: mauricio gallego <mauricio.gallego@yum.com>
Date:   Mon May 19 23:58:24 2025 -0500

    feature: changin alot of things

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -13,8 +13,16 @@ body {
   font-style: normal;
 }
 
+@font-face {
+  font-family: "eagle-horizon";
+  src: url("/fonts/EagleHorizonP.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 @theme inline {
   --font-sisterhood: "sisterhood";
+  --font-eagle-horizon: "eagle-horizon";
 }
 
 @layer base {
