--- a/src/components/shared/button/Button.css
+++ b/src/components/shared/button/Button.css
@@ -52,7 +52,7 @@
 
 .btn-31:before {
   --progress: 100%;
-  background: #5689c0;
+  background: #6699cc;
   -webkit-clip-path: polygon(
     100% 0,
     var(--progress) var(--progress),
